--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Game</title>
-      <script src="node_modules/phaser/dist/phaser.min.js"></script>
+    <script src="node_modules/phaser/dist/phaser.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="app.css">
   </head>
-  <body>
+  <body id="body">
     <script src='app.js'></script>
   </body>
 </html>
